# ssi-kubernetes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: on_push_main.yml
aggregator/: Cargo.toml  Dockerfile
aggregator/src/: error.rs  main.rs
kubernetes/base/: kustomization.yml
kubernetes/base/aggregator/: deployment.yml  ingress.yml  svc.yml
kubernetes/base/nouns/: deployment.yml  svc.yml
kubernetes/base/verbs/: deployment.yml  svc.yml
kubernetes/local/: kustomization.yml  ns.yml
kubernetes/local-ssi/: kustomization.yml  ns.yml
kubernetes/local-ssi/aggregator/: no-ssl-redirect.patch.yml
kubernetes/local-ssi/kyverno/: add-istio-labels.yml  add-securitycontext.yml  require-liveness-readiness.yml  require-requests.yml  verify-image-signature.yml
words/: Cargo.toml  Dockerfile
words/src/: main.rs  words.rs
