[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3.0.1", features = ["tracing"] }
reqwest = { version = "0.12.9", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
shadow-rs = "0.36.0"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
shadow-rs = "0.36.0"
